--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,6 @@
   <%= render "shared/search_form" %>
 </div>
 
-<div class="container">
+<div class="container mb-5">
   <%= render 'event_card', events: @events %>
 </div>
