--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
+<nav class="navbar navbar-light bg-light justify-content-between mt-5">
   <div class="nav-item active">
     <%= link_to root_path, class: "nav-link" do %>
       <i class="fa-solid fa-house"></i>
